# WUTA

./: README.md
src/src/ros/can_client/lib/can_client/: ultra_bf19  vehicle_core
src/src/ros/can_client/lib/pkgconfig/: can_client.pc
src/src/ros/can_client/share/can_client/: package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
src/src/ros/can_connect/share/can_connect/: package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
src/src/ros/can_connect/share/can_connect/cmake/: can_connectConfig.cmake
src/src/ros/can_connect/share/can_connect/launch/: can_connect.launch  v2x_connect.launch
src/src/ros/common/fsd_common_msgs/: CMakeLists.txt
src/src/ros/control/controller/: CMakeLists.txt
src/src/ros/fssim_interface/include/: interface.hpp
src/src/ros/fssim_interface/src/: fssim_interface_node.cpp
src/src/ros/lidar_obstacle_detection/: CMakeLists.txt  package.xml
src/src/ros/lidar_obstacle_detection/launch/: obstacle_detection.launch  obstacle_detection.launch_old
src/src/ros/lidar_obstacle_detection/rviz/: default.rviz
src/src/ros/lidar_obstacle_detection/src/: environment.cpp  lidar_fusion.cpp  obstacle_detection.cpp  processPointClouds.cpp  render.cpp
src/src/ros/nmea_navsat_driver/launch/: nmea_serial_driver.launch
src/src/ros/startingup_ros/: CMakeLists.txt  package.xml
src/src/ros/startingup_ros/launch/: auto_mode.launch  startingup.launch  startingup_navigation.launch
src/src/ros/startingup_ros/rviz/: build_map.rviz  default.rviz  load_points.rviz  record_bag.rviz  save_points.rviz
(+131 files in other folders)
