<?xml version="1.0"?>
<package format="2">
  <name>can_connect</name>
  <version>1.12.0</version>
  <description>The can_connect package</description>
  <maintainer email="antranger@gmail.com">Ant Ranger</maintainer>
  <author email="antranger@gmail.com">Ant Ranger</author>
  <license>Apache 2</license>

  <buildtool_depend>autoware_build_flags</buildtool_depend>
  <buildtool_depend>catkin</buildtool_depend>

  
  <depend>autoware_msgs</depend>
  <depend>autoware_can_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>roscpp</depend>
  <depend>tf</depend>
</package>
